Revision history for Test-Aggregate

0.35_02 14/05/2009
        - Deprecate tests run in BEGIN/END/CHECK/INIT.
          See http://use.perl.org/~Ovid/journal/38974 for more information.
        - check_plan, if set, is now done at the end of each test instead of
          the end of all tests.
        - Make it work with the Test::Builder 0.88 and previous versions.
        - Embed the calling test script name in a comment at the top of the
          dump file.
        - Fix a doc typo (thanks to Offer Kaye for the report)
        - Cleaned up some tests.

0.35_01 18/11/2008
        - Make 'exit()' scream loudly if called.
        - Move Test::Aggregate::Builder globals into a hashref in the object.
          Further encapsulation to come later.
        - Export &run_this_test_program from Test::Aggregate to make dump
          files cleaner.
        - Reorganize the test suite to avoid false negatives.

0.35    27/10/2008
        - Move from developer to production version number.
        - Add 'use Test::Aggregate' to the dump file.
        - Updated the docs to explain that the C<Test::More> functions are
          re-exported.

0.34_09 15/10/2008
        - Added 'tests' key to the constructor.  This is an optional method of
          identifying which tests you wish to aggregate.

0.34_08 14/10/2008
        - Much refactoring of internals.  This moves some autogenerated code
          directly into the Test::Aggregate namespace and Test::Aggregate->run
          calls this code directly to better synchronize behavior between
          running the code and running the dump file.  This has the side
          effect of making individual test files much easier to find and read
          and makes the 'dump.t' file smaller.
        - Fixed a bug where a test dieing could cause the wrong test to be
          reported as failing.
        - Removed %INC from the list of localized variables.  Localazing this