@@ -1,6 +1,6 @@
 ---
 name: Test-Aggregate
-version: 0.35_02
+version: 0.35_03
 author:
   - 'Curtis "Ovid" Poe <ovid@cpan.org>'
 abstract: Aggregate C<*.t> tests to make them run faster.
@@ -20,10 +20,10 @@ recommends:
 provides:
   Test::Aggregate:
     file: lib/Test/Aggregate.pm
-    version: 0.35_02
+    version: 0.35_03
   Test::Aggregate::Builder:
     file: lib/Test/Aggregate/Builder.pm
-    version: 0.35_02
+    version: 0.35_03
 generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
