@@ -48,11 +48,11 @@ Test::Aggregate - Aggregate C<*.t> tests to make them run faster.
 
 =head1 VERSION
 
-Version 0.35_02
+Version 0.35_03
 
 =cut
 
-$VERSION = '0.35_02';
+$VERSION = '0.35_03';
 
 =head1 SYNOPSIS
 
